Lined up hero text with nav bar

--- a/style.css
+++ b/style.css
@@ -39,10 +39,11 @@ a{
 
 .container-top{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 40px;
-    padding: 16px;
+    padding: 16px 0;
+    margin: 0 auto;
+    width: 800px;
 }
 
 .heading{
