--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px;
+    padding: 16px 0;
     width: 800px;
     margin: 0 auto;
 }
